Revert "fix scrollbar" (lmao UIs are huge)
This reverts commit 7c43266ff84c532821559301281035dccee10fee.

--- a/html/statbrowser.css
+++ b/html/statbrowser.css
@@ -3,11 +3,6 @@
 	--scrollbar-thumb: #a7a7a7;
 }
 
-html,
-body {
-	scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-base);
-}
-
 body {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 12px !important;
@@ -17,16 +12,13 @@ body {
 	overflow-y: scroll;
 }
 
-/**
- * MARK: Dark theme colors
- */
 .dark:root {
-	--scrollbar-base: #151515;
+	--scrollbar-base: #181818;
 	--scrollbar-thumb: #363636;
 }
 
 body.dark {
-	background-color: #151515;
+	background-color: #131313;
 	color: #b2c4dd;
 	scrollbar-base-color: #1c1c1c;
 	scrollbar-face-color: #3b3b3b;
@@ -45,7 +37,7 @@ body.dark {
 }
 
 .dark #menu {
-	background-color: #151515;
+	background-color: #202020;
 }
 
 #statcontent {
